WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71266
CSS2:text-decoration: <rt> element should not inherit text-decoration property
https://bugs.webkit.org/show_bug.cgi?id=71266
Summary
CSS2:text-decoration: <rt> element should not inherit text-decoration property
Hiroshi Takase
Reported
2011-10-31 23:16:40 PDT
Created
attachment 113132
[details]
HTML source Text-decoration property does not inherit. So <rt> element should not be underlined if <rt> element itself is not specified "text-decoration" property and the parent element is specified "text-decoration:underline".
Attachments
HTML source
(684 bytes, text/html)
2011-10-31 23:16 PDT
,
Hiroshi Takase
no flags
Details
Prevent text-decoration propagation for rt tag if it has its default treatment of block
(4.64 KB, patch)
2012-02-16 21:42 PST
,
Koji Ishii
no flags
Details
Formatted Diff
Diff
patch: Prevent text-decoration propagation for rt tag if it has its default treatment of block
(4.47 KB, patch)
2012-02-22 03:37 PST
,
Koji Ishii
no flags
Details
Formatted Diff
Diff
patch: Prevent text-decoration propagation for rt tag if it has its default treatment of block
(5.30 KB, patch)
2012-02-23 00:01 PST
,
Koji Ishii
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Koji Ishii
Comment 1
2011-11-01 20:52:53 PDT
Here's the discussion on this at www-style:
http://lists.w3.org/Archives/Public/www-style/2011Sep/0238.html
Koji Ishii
Comment 2
2012-02-14 12:53:05 PST
I'd like to work on this one.
Koji Ishii
Comment 3
2012-02-16 21:42:23 PST
Created
attachment 127519
[details]
Prevent text-decoration propagation for rt tag if it has its default treatment of block Turned out that the diff is just one line. A new reftest is included.
Koji Ishii
Comment 4
2012-02-17 01:44:28 PST
Now I wonder, maybe tests should be in fast/ruby instead of fast/css, because the test requires ruby and CSS2. Any suggestions appreciated.
Koji Ishii
Comment 5
2012-02-21 21:11:06 PST
Comment on
attachment 127519
[details]
Prevent text-decoration propagation for rt tag if it has its default treatment of block I'd like to take a different approach.
Koji Ishii
Comment 6
2012-02-21 21:48:45 PST
In
bug 18611
, the fix is made to RenderObject::getTextDecorationColors. Which is the correct place to fix?
Koji Ishii
Comment 7
2012-02-22 03:37:36 PST
Created
attachment 128170
[details]
patch: Prevent text-decoration propagation for rt tag if it has its default treatment of block Previous patch modified CSSStyleSelector::adjustRenderStyle, but I found a similar
bug 18611
, which fixes RenderObject::getTextDecorationColors instead, so this patch follows that. Two things are different from the previous patch: * The check is slightly faster than the previous patch (one virtual call on paint(), while the previous patch checks two fields on attach().) * The -webkit-text-decoration-in-effect was not set in the previous patch, but is set in this patch. reftest is included. This is slightly improved from the previous patch.
Koji Ishii
Comment 8
2012-02-22 23:34:26 PST
Comment on
attachment 128170
[details]
patch: Prevent text-decoration propagation for rt tag if it has its default treatment of block Could someone please review this patch?
Kentaro Hara
Comment 9
2012-02-22 23:46:27 PST
Comment on
attachment 128170
[details]
patch: Prevent text-decoration propagation for rt tag if it has its default treatment of block View in context:
https://bugs.webkit.org/attachment.cgi?id=128170&action=review
> Source/WebCore/ChangeLog:7 > +
Would you please add the link to the spec that supports this change?
Koji Ishii
Comment 10
2012-02-23 00:01:38 PST
Created
attachment 128416
[details]
patch: Prevent text-decoration propagation for rt tag if it has its default treatment of block Added the link to the spec that supports this change, and also to a discussion at www-style to confirm it to the ChangeLogs.
Kentaro Hara
Comment 11
2012-02-23 00:14:02 PST
Comment on
attachment 128416
[details]
patch: Prevent text-decoration propagation for rt tag if it has its default treatment of block Makes sense!
WebKit Review Bot
Comment 12
2012-02-23 02:15:14 PST
Comment on
attachment 128416
[details]
patch: Prevent text-decoration propagation for rt tag if it has its default treatment of block Rejecting
attachment 128416
[details]
from review queue.
haraken@chromium.org
does not have reviewer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have reviewer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
Kentaro Hara
Comment 13
2012-02-23 02:22:59 PST
Just right now something wrong seems to be happening on the WebKit svn server. Let me commit it again after the issue is solved.
WebKit Review Bot
Comment 14
2012-02-23 07:42:54 PST
Comment on
attachment 128416
[details]
patch: Prevent text-decoration propagation for rt tag if it has its default treatment of block Rejecting
attachment 128416
[details]
from review queue.
haraken@chromium.org
does not have reviewer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have reviewer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
Kentaro Hara
Comment 15
2012-02-23 15:28:56 PST
Comment on
attachment 128416
[details]
patch: Prevent text-decoration propagation for rt tag if it has its default treatment of block It seems strange. As far as I see committers.py, I am in the reviewer list and no change had been made to the list recently. Let me try r+ again.
WebKit Review Bot
Comment 16
2012-02-23 15:55:34 PST
Comment on
attachment 128416
[details]
patch: Prevent text-decoration propagation for rt tag if it has its default treatment of block Clearing flags on attachment: 128416 Committed
r108690
: <
http://trac.webkit.org/changeset/108690
>
WebKit Review Bot
Comment 17
2012-02-23 15:55:40 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug